--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
           </figure>
       </div>
       <div class="col-md-8 col-xh-padding col-xv-padding">
-        <h5 class="intro">POSTDOCTORAL RESEARCHER IN PHYSICAL CHEMISTRY</h5>
-        <h1 class="intro">My name is Si Yue Guo</h1>
-        <p>
+        <h5 class="page-intro">POSTDOCTORAL RESEARCHER IN PHYSICAL CHEMISTRY</h5>
+        <h1 class="name-intro">My name is Si Yue Guo</h1>
+        <p class="intro-para">
           I'm investingating how matter behaves at the atomic scale using scanning probe microscopy and quantum mechanical modeling. And I'm improving science literacy and education through teaching, mentorship, and outreach.
         </p>
         <a class="btn btn-light" href="#">CONTACT ME</a>
@@ -26,20 +26,20 @@
   <div class="row col-xv-padding">
     <div class="col-md-12"></div>
     <h2 class="col-xh-padding ptitle">Resume</h2>
-    <p class="col-xh-padding">
+    <p class="col-xh-padding section-text">
       I was born in China and grew up in the beautiful city of Montreal, Canada. After completed a Joint Honours BSc in Math and Physics at McGill University, I went on to pursue a PhD in Physical Chemistry at the University of Toronto, under the supervision of Prof. John Polanyi.
     </p>
   </div>
 
   <div class="row">
     <div class="col-md-4 col-xh-padding">
-      <h4>Education</h4>
+      <h4 class="list-heading">Education</h4>
       <p>2015   PhD Physical Chemistry University of Toronto</p>
       <p>2009   BSc Joint Honours in Math and Physics McGill University</p>
       <p>2006   DEC Pure and Applied Sciences Marianopolis College</p>
     </div>
     <div class="col-md-4 col-xh-padding">
-      <h4>Selected Awards</h4>
+      <h4 class="list-heading">Selected Awards</h4>
       <p>Gordon Cressy Student Leadership Award </p>
       <p>Vanier Canada Graduate Scholarship</p>
       <p>NSERC CGS-M, FQRNT B1 and B2</p>
@@ -48,7 +48,7 @@
       <p>Massey College, JF</p>
     </div>
     <div class="col-md-4 col-xh-padding">
-      <h4>Languages</h4>
+      <h4 class="list-heading">Languages</h4>
       <p>Fluent in English and French</p>
       <p>Intermediate in Chinese Mandarin and Shanghainese</p>
     </div>
@@ -62,10 +62,10 @@
     <div class="col-md-8 col-xh-padding col-xv-padding">
       <h2 class="ptitle">Research</h2>
       <h4 class="subtitle">Bridging EXPT and THEORY</h4>
-      <p>
+      <p class="section-text">
         I use scanning probe microscopy and quantum mechanical modeling to study matter at the atomic scale. (Conductance quantization, biological systems, reaction dynamics at surfaces, etc.)
       </p>
-      <p>
+      <p class="section-text">
         I'm currently exploring how molecules interact on adn with a semiconductory surface. Although my research is fundamental in nature, it has implications for heterogeneous catalysis, molecular electronics, self-assembly at surfaces, and many fields.
       </p>
       <p>Software       VASP, Gaussian, MATLAB, ...</p>
@@ -91,7 +91,7 @@
     <div class="col-md-8 col-xv-padding">
       <h2 class="ptitle">Outreach</h2>
       <h4 class="subtitle">STEM Mentoriship, Consulting, and Facilitation</h4>
-      <p>
+      <p class="section-text">
         I'm passionate about promoting science and education, in encouraging the curiousity and leadership in others. Please get in touch with me for collaboration and consultation.
       </p>
       <ul>
@@ -115,7 +115,7 @@
     <form class="col-md-6 col-md-offset-3">
       <h2 class="ptitle">Contact</h2>
       <h4 class="subtitle">Let's get in touch!</h4>
-      <p>
+      <p class="section-text">
         Feel free to send me a message. Some more engaging text here above the contact form.
       </p>
       <div class="form-group">
