Added spacing to the years in resume section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,23 +34,23 @@
   <div class="row">
     <div class="col-md-4 col-xh-padding">
       <h4 class="list-heading">Education</h4>
-      <p>2015   PhD Physical Chemistry University of Toronto</p>
-      <p>2009   BSc Joint Honours in Math and Physics McGill University</p>
-      <p>2006   DEC Pure and Applied Sciences Marianopolis College</p>
+      <p class="list-text left-65"><span class="year">2015</span>PhD Physical Chemistry University of Toronto</p>
+      <p class="list-text left-65"><span class="year">2009</span>BSc Joint Honours in Math and Physics McGill University</p>
+      <p class="list-text left-65"><span class="year">2006</span>DEC Pure and Applied Sciences Marianopolis College</p>
     </div>
     <div class="col-md-4 col-xh-padding">
       <h4 class="list-heading">Selected Awards</h4>
-      <p>Gordon Cressy Student Leadership Award </p>
-      <p>Vanier Canada Graduate Scholarship</p>
-      <p>NSERC CGS-M, FQRNT B1 and B2</p>
-      <p>Canada Millennium Scholarship Foundation Excellence Awaard</p>
-      <p>Best in Fair at the Canada Wide Science Fair</p>
-      <p>Massey College, JF</p>
+      <p class="list-text">Gordon Cressy Student Leadership Award </p>
+      <p class="list-text">Vanier Canada Graduate Scholarship</p>
+      <p class="list-text">NSERC CGS-M, FQRNT B1 and B2</p>
+      <p class="list-text">Canada Millennium Scholarship Foundation Excellence Awaard</p>
+      <p class="list-text">Best in Fair at the Canada Wide Science Fair</p>
+      <p class="list-text">Massey College, JF</p>
     </div>
     <div class="col-md-4 col-xh-padding">
       <h4 class="list-heading">Languages</h4>
-      <p>Fluent in English and French</p>
-      <p>Intermediate in Chinese Mandarin and Shanghainese</p>
+      <p class="list-text">Fluent in English and French</p>
+      <p class="list-text">Intermediate in Chinese Mandarin and Shanghainese</p>
     </div>
   </div>
 
@@ -105,9 +105,6 @@
         <li>Pueblo Science</li>
         <li>Science policy; supporting basic research (Massey, Chem dept)</li>
       </ul>
-      <p>Software       VASP, Gaussian, MATLAB, ...</p>
-      <p>Techniques     STM, AFM, SNOM, FIB, SEM, machhine shop</p>
-      <p>Publications   Lorem ipsum</p>
     </div>
   </div>
 
