--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
   </div>
 
   <div class="row">
-    <form class="col-md-6 col-md-offset-3">
+    <form action="http://formspree.io/alex.parker@evolvingweb.ca" method="POST" class="col-md-6 col-md-offset-3">
       <h2 class="ptitle">Contact</h2>
       <h4 class="subtitle">Let's get in touch!</h4>
       <p class="section-text">
@@ -117,19 +117,19 @@
       </p>
       <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name" placeholder="Enter name">
+        <input type="text" name="name" class="form-control" id="name" placeholder="Enter name">
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email">
+        <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
       </div>
       <div class="form-group">
         <label for="email">Subject:</label>
-        <input type="text" class="form-control" id="subject" placeholder="Enter subject">
+        <input type="text" class="form-control" name="subject" id="subject" placeholder="Enter subject">
       </div>
       <div class="form-group">
         <label for="comment">Message:</label>
-        <textarea class="form-control" rows="5" id="comment"></textarea>
+        <textarea class="form-control" name="message" rows="5" id="comment"></textarea>
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
